src/objects/PagesApi__Community_Group__c.object
<CustomObject>
    <description>A group of members which could contain either groups or contacts or accounts.</description>
    <fields>
        <fullName>PagesApi__Banner__c</fullName>
        <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/cover-bgs/cover-1.jpg&quot;</defaultValue>
        <description>Banner displayed in the group</description>
        <inlineHelpText>Banner displayed in the group</inlineHelpText>
        <label>Banner</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Chatter_Group_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>**System Calculated** Collaboration group ID that the community group is linked with.</description>
        <externalId>true</externalId>
        <inlineHelpText>**System Calculated** Collaboration group ID that the community group is linked with.</inlineHelpText>
        <label>Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PagesApi__Community_Network_ID__c</fullName>
        <description>** System Calculated ** This field shows the ID for the related community.</description>
        <formula>PagesApi__Site__r.PagesApi__Community_Network_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** This field shows the ID for the related community.</inlineHelpText>
        <label>Community Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <description>Description of the group that should appear in the dashboard of the group.</description>
        <inlineHelpText>Description of the group that should appear in the dashboard of the group.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Disable_Join__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable joining the community group.</description>
        <inlineHelpText>Disable joining the community group.</inlineHelpText>
        <label>Disable Join</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Email__c</fullName>
        <description>The Group&apos;s email address.</description>
        <inlineHelpText>The Group&apos;s email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Group will only be made visible when the Contact meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</description>
        <inlineHelpText>When checked, the Group will only be made visible when the Contact meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_Community_Feed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables chatter features in the community. Requires members to be enabled.</description>
        <inlineHelpText>Enables chatter features in the community. Requires members to be enabled.</inlineHelpText>
        <label>Enable Community Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables event only features in the community.</description>
        <inlineHelpText>Enables event only features in the community.</inlineHelpText>
        <label>Enable Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_Members__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables Member features in the community.</description>
        <inlineHelpText>Enables Member features in the community.</inlineHelpText>
        <label>Enable Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Facebook_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Facebook icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Facebook icon in the group dashboard.</inlineHelpText>
        <label>Facebook Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Google_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Google+ icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Google+ icon in the group dashboard.</inlineHelpText>
        <label>Google+ Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Image_URL__c</fullName>
        <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/placeholders/item.png&quot;</defaultValue>
        <description>URL for the group image that should appear in the dashboard of the group.</description>
        <inlineHelpText>URL for the group image that should appear in the dashboard of the group.</inlineHelpText>
        <label>Group Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Member_Edit_Field_Sets_CSV__c</fullName>
        <defaultValue>&quot;Community_Group_Member_Edit&quot;</defaultValue>
        <description>This field references field sets that define the attributes to be updated by the group member when editing their group member profile.</description>
        <inlineHelpText>This field references field sets that define the attributes to be updated by the group member when editing their group member profile.</inlineHelpText>
        <label>Group Member Edit Field Sets(CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Member_View_Field_Sets_CSV__c</fullName>
        <defaultValue>&quot;Community_Group_Member_View&quot;</defaultValue>
        <description>This field references field sets that define the attributes to be seen on the group member modal.</description>
        <inlineHelpText>This field references field sets that define the attributes to be seen on the group member modal.</inlineHelpText>
        <label>Group Member View Field Sets(CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the group. Defaults to the user creating the group, if not populated.</description>
        <inlineHelpText>Owner of the group. Defaults to the user creating the group, if not populated.</inlineHelpText>
        <label>Group Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Roster_Label__c</fullName>
        <defaultValue>&quot;Group Roster&quot;</defaultValue>
        <description>Button label displayed on the group detail page.</description>
        <inlineHelpText>Button label displayed on the group detail page.</inlineHelpText>
        <label>Group Roster Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Roster_Link__c</fullName>
        <description>Page where the user should be redirected when they click the roster link. Defaults to the group roster page.</description>
        <inlineHelpText>Page where the user should be redirected when they click the roster link. Defaults to the group roster page.</inlineHelpText>
        <label>Group Roster Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Account_Member_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Selected if Member Entity Type is &quot;Account.&quot;</description>
        <inlineHelpText>**System Calculated** Selected if Member Entity Type is &quot;Account.&quot;</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Contact_Member_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Selected if Member Entity Type is &quot;Contact.&quot;</description>
        <inlineHelpText>**System Calculated** Selected if Member Entity Type is &quot;Contact.&quot;</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Group_Member_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Selected if Member Entity Type is &quot;Group.&quot;</description>
        <inlineHelpText>**System Calculated** Selected if Member Entity Type is &quot;Group.&quot;</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the group is Private.</description>
        <inlineHelpText>Checked if the group is Private.</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if group is Public.</description>
        <inlineHelpText>Checked if group is Public.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field, the group will be displayed in the Community Portal.</description>
        <inlineHelpText>By checking this field, the group will be displayed in the Community Portal.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Unlisted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if group is Unlisted.</description>
        <inlineHelpText>Checked if group is Unlisted.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__LinkedIn_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the LinkedIn icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the LinkedIn icon in the group dashboard.</inlineHelpText>
        <label>LinkedIn Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Member_Entity_Type__c</fullName>
        <description>Defines the member type. Only the type selected can be a member of the group.</description>
        <inlineHelpText>Defines the member type. Only the type selected can be a member of the group.</inlineHelpText>
        <label>Member Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Member_Search_Display_Field_s_CSV__c</fullName>
        <description>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</description>
        <inlineHelpText>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</inlineHelpText>
        <label>Member Search Display Fields (CSV)</label>
        <length>31768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Member_Search_Display_Fields_CSV__c</fullName>
        <description>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</description>
        <inlineHelpText>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</inlineHelpText>
        <label>Member Search Display Fields (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Member_Search_Filter_Field_s_CSV__c</fullName>
        <description>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&apos;s API name.</description>
        <inlineHelpText>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&apos;s API name.</inlineHelpText>
        <label>Member Search Filter Fields (CSV)</label>
        <length>31768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Member_Search_Filter_Fields_CSV__c</fullName>
        <description>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&apos;s API name.</description>
        <inlineHelpText>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&apos;s API name.</inlineHelpText>
        <label>Member Search Filter Fields (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Members__c</fullName>
        <description>Number of members in the group.</description>
        <inlineHelpText>Number of members in the group.</inlineHelpText>
        <label>Members</label>
        <summaryForeignKey>PagesApi__Community_Group_Member__c.PagesApi__Community_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PagesApi__Privacy_Setting__c</fullName>
        <description>Choose the privacy settings of the group:
1. Public - Open visibility; Open join process
2. Private - Restricted visibility; Approval based join process
3. Unlisted - Visible only to members, not searchable; Backend join process</description>
        <inlineHelpText>1. Public - Open visibility; Open join process
2. Private - Restricted visibility; Approval based join process
3. Unlisted - Visible only to members, not searchable; Backend join process</inlineHelpText>
        <label>Privacy Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                    <default>true</default>
                    <label>Public</label>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Unlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Private_Community_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Chatter only for members of the community group.</description>
        <inlineHelpText>Enables Chatter only for members of the community group.</inlineHelpText>
        <label>Private Community Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Private_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Events only for members of the community group.</description>
        <inlineHelpText>Enables Events only for members of the community group.</inlineHelpText>
        <label>Private Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Private_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables member features for members only in the community.</description>
        <inlineHelpText>Enables member features for members only in the community.</inlineHelpText>
        <label>Private Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Search_Results_Sort_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group member search results in ascending or descending order. Limited to Community Group Member Fields Only.</description>
        <inlineHelpText>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group member search results in ascending or descending order. Limited to Community Group Member Fields Only.</inlineHelpText>
        <label>Search Results Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Search_Results_Sort_Order__c</fullName>
        <defaultValue>&quot;ASC&quot;</defaultValue>
        <description>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</description>
        <inlineHelpText>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</inlineHelpText>
        <label>Search Results Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Search_Results__c</fullName>
        <defaultValue>10</defaultValue>
        <description>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Group Members tab.</description>
        <inlineHelpText>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Group Members tab.</inlineHelpText>
        <label>Search Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Show_Group_Roster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the link of the group roster in the community group dashboard.</description>
        <inlineHelpText>Displays the link of the group roster in the community group dashboard.</inlineHelpText>
        <label>Show Group Roster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Show_Search_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**  Default Unchecked ** This field enables or disables the filters in the Group Search page.</description>
        <inlineHelpText>**  Default Unchecked ** This field enables or disables the filters in the Group Search page.</inlineHelpText>
        <label>Show Search Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the Site which owns the Community Group.</description>
        <inlineHelpText>** Required ** Link to the Site which owns the Community Group.</inlineHelpText>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Community Groups</relationshipLabel>
        <relationshipName>Community_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Twitter_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</inlineHelpText>
        <label>Twitter Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Type__c</fullName>
        <description>This field allows you to define a type of group to be available in the group search.  This field&apos;s values can be updated to better suite your organization&apos;s needs.</description>
        <inlineHelpText>This field allows you to define a type of group to be available in the group search.  This field&apos;s values can be updated to better suite your organization&apos;s needs.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Member Group</fullName>
                    <default>true</default>
                    <label>Member Group</label>
                </value>
                <value>
                    <fullName>Task-Force</fullName>
                </value>
                <value>
                    <fullName>Working Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Community Group</label>
    <listViews>
        <fullName>PagesApi__All</fullName>
        <columns>NAME</columns>
        <columns>PagesApi__Group_Owner__c</columns>
        <columns>PagesApi__Email__c</columns>
        <columns>PagesApi__Type__c</columns>
        <columns>PagesApi__Privacy_Setting__c</columns>
        <columns>PagesApi__Members__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>